src/raml1/test/data/TCK/raml-1.0/InvalidIncludeTags/test008/api.raml

#%RAML 1.0
title: test API

types:
  T1:
    type: ./path/to/type_fragment.raml
    properties:
      p1:

/resource:
  get:
    responses:
      200:
        body:
          application/json:
            type: ./path/to/type_fragment.raml
